# goals-api.danielmoessner.de

./: .gitignore  apache.conf  call-deploy.sh  css.sh  deploy.sh  freeze.sh  manage.py  outdated.sh  package-lock.json  package.json  permissions.sh  postcss.config.js  precommit.sh  production_manage.py  pull-db.sh  pyproject.toml  requirements-updated.txt  requirements.txt  run.sh  setup.sh  tailwind.config.js  thoughts.md  thoughts.txt
apps/achievements/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
apps/core/: apps.py  forms.py  utils.py  views.py
apps/goals/: admin.py  apps.py  forms.py  models.py  serializer.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
apps/notes/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
apps/story/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
apps/todos/: admin.py  api.py  apps.py  forms.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
apps/users/: admin.py  apps.py  forms.py  generators.py  models.py  serializers.py  urls.py  views.py  (+1 more)
config/: auth.py  fields.py  filebrowser.py  form.py  mixins.py  urls.py  wsgi.py
docs/: permissions.sh
jinja2/: core_index.j2  notes_note.j2  test.j2
requirements/: base.txt  req.txt
static/: gulpfile.js  package-lock.json  package.json  postcss.config.js
templates/: base.html  form.html  form_snippet.html  form_view.html  global_form_view.html  nav.html  nav.txt  subnav.txt
tmp/: db.sqlite3  secrets.json
(+358 files in other folders)
